--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,10 @@ footer a {
   background-color: #368654;
 }
 
+.forMobile {
+  display: none;
+}
+
 @media only screen and (max-width: 600px) {
   .mainWrap {
     display: none;
